# osmen-librarian

./: .dockerignore  .env.example  .gitignore  AGENT_SETUP.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  global_freeze.txt  implementation_status.md  librarian.agent.md  pyproject.toml  requirements.txt  requirements_librarian.txt  test_checkpointing.py  test_deep_agent_tools.py  test_enhancements.py  test_graph.py  test_hitl.py  test_lateral.py  test_middleware.py  test_subagents.py  venv_freeze.txt  verify_env.py
.github/workflows/: ci.yml
clients/notion/: notion_sync.py
clients/obsidian/: README.md  librarian_connector.js
clients/opennotebook/: config.json
data/: .gitkeep  Cortina_Liotti.md  Dao_of_Complexity.md  F25 HB Syllabus_Final.md  Gillespie_Cornish.md  Keeper_Handbook.md  Little_Book_of_Circle_Processes.md  Sacred_Wounds.md  Shared_Wisdom.md  jung_query.json  query_result.json
data/db/: .gitkeep
docs/: subagent_librarian_protocols.md
src/: app.py  cli.py  convert_docx_to_md.py  convert_epub_to_md.py  convert_sources.py  deep_analyzer.py  deep_research.py  extract_pdf_text.py  graph.py  langflow_lateral.py  lateral_thinking.py  librarian_tools.py  mcp_server.py  memory.py  rag_manager.py  store.py  test_gpu.py  tracing.py
src/assistants/: __init__.py  schema.py  storage.py
src/memory/: checkpoint.py  store.py
src/middleware/: __init__.py  base.py  filesystem.py  hitl.py  subagent.py  todo.py
src/modes/: __init__.py  foundation.py  lateral.py
src/retrieval/: __init__.py  chroma.py  interfaces.py
src/server/: app.py
src/subagents/: __init__.py  base.py  executor.py  fact_checker.py  lateral_researcher.py  summarizer.py
src/tests/: __init__.py  test_assistants.py  test_integration.py  test_middleware.py  test_retrieval.py  test_subagents.py
