# =============================================================================
# OsMEN Librarian - pyproject.toml
# =============================================================================
# Modern Python packaging configuration for PEP 517/518/621 compliance
# Part of the OsMEN ecosystem: https://github.com/dwilli15/OsMEN

[project]
name = "osmen-librarian"
version = "2.0.0"
description = "RAG & lateral thinking engine for the OsMEN multi-agent ecosystem"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "OsMEN Team"}
]
keywords = [
    "rag",
    "langgraph",
    "chromadb",
    "research-assistant",
    "lateral-thinking",
    "mcp",
    "osmen",
    "multi-agent"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    # Core RAG & LangChain
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    
    # Vector Store
    "chromadb>=0.5.0",
    
    # Embeddings
    "sentence-transformers>=3.0.0",
    
    # Document Processing
    "beautifulsoup4>=4.12.0",
    "markdown>=3.7.0",
    "pyyaml>=6.0.0",
    
    # ML
    "torch>=2.0.0",
    "transformers>=4.46.0",
    "accelerate>=0.34.0",
    "numpy>=1.26.0",
    
    # Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    
    # CLI
    "typer>=0.12.0",
    "rich>=13.9.0",
    
    # Async DB
    "aiosqlite>=0.20.0",
    
    # MCP
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
postgres = [
    "asyncpg>=0.30.0",
]
gpu = [
    # GPU torch must be installed separately with:
    # pip install torch --index-url https://download.pytorch.org/whl/cu124
]
langfuse = [
    "langfuse>=2.0.0",
]

[project.scripts]
librarian = "src.cli:main"
librarian-serve = "src.app:main"

[project.urls]
Homepage = "https://github.com/dwilli15/osmen-librarian"
Documentation = "https://github.com/dwilli15/osmen-librarian#readme"
Repository = "https://github.com/dwilli15/osmen-librarian.git"
Issues = "https://github.com/dwilli15/osmen-librarian/issues"
"OsMEN Platform" = "https://github.com/dwilli15/OsMEN"

# -----------------------------------------------------------------------------
# Build System
# -----------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.md"]

# -----------------------------------------------------------------------------
# Testing
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

# -----------------------------------------------------------------------------
# Code Quality
# -----------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # defaults
  \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in init files

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    "__pycache__",
    "build",
    "dist",
]

# -----------------------------------------------------------------------------
# Coverage (optional)
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
